<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="410dp"
        android:layout_height="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <TextView
                android:id="@+id/dif"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner"
                android:shadowRadius="100"
                android:text="@string/dif"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                app:layout_constraintCircleRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@+id/dif"
                app:srcCompat="@drawable/noun_smile_2937518__2_" />


            <TextView
                android:id="@+id/disc"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="@drawable/rounded_corner"
                android:shadowRadius="100"
                android:text="@string/disc"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:layout_constraintCircleRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/dif" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@+id/dif"
                app:srcCompat="@drawable/seta_para_cima"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/carac"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="@drawable/rounded_corner"
                android:shadowRadius="100"
                android:text="@string/carac"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/disc" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@+id/carac"
                app:srcCompat="@drawable/mobile_banking"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/band"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="@drawable/rounded_corner"
                android:shadowRadius="100"
                android:text="@string/band"
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/carac" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/band"
                app:srcCompat="@drawable/mobile_banking__1_" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>